--- a/rails/app/assets/stylesheets/book.scss
+++ b/rails/app/assets/stylesheets/book.scss
@@ -1,3 +1,5 @@
-// Place all the styles related to the Book controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+    font-family: Helvetica, Geneva, Arial, sans-serif;
+    font-size: small;
+    background-color: #fff;
+ }
